SERVER-41861 Simplify the concurrency between timestamp_transaction and commit_transaction in WiredTigerRecoveryUnit::_txnClose()

(cherry picked from commit 65f608a4b17440d75ece209e209401e1d74ad638)